--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -158,7 +158,7 @@
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text=""
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/black_textview"
                     android:textSize="17sp" />
             </LinearLayout>
 
@@ -184,7 +184,7 @@
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text=""
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/black_textview"
                     android:textSize="17sp" />
             </LinearLayout>
 
