--- a/duducar_passengar_ios/duducar/PaymentViewController.xib
+++ b/duducar_passengar_ios/duducar/PaymentViewController.xib
@@ -142,8 +142,8 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
-                            <rect key="frame" x="528" y="4" width="67" height="31"/>
+                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
+                            <rect key="frame" x="509" y="4" width="67" height="31"/>
                             <state key="normal" title="选择" image="unchecked"/>
                             <connections>
                                 <action selector="aliPaySelected:" destination="-1" eventType="touchUpInside" id="3a8-vp-53N"/>
@@ -178,8 +178,8 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fy3-Jr-YhZ">
-                            <rect key="frame" x="528" y="4" width="67" height="31"/>
+                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fy3-Jr-YhZ">
+                            <rect key="frame" x="509" y="4" width="67" height="31"/>
                             <state key="normal" title="选择" image="unchecked"/>
                             <connections>
                                 <action selector="WechatPaySelected:" destination="-1" eventType="touchUpInside" id="i3V-u6-P1T"/>
