--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -107,12 +107,21 @@
                 android:paddingRight="@dimen/small_padding">
 
                 <TextView
+                    android:id="@+id/version_update_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="版本更新"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/version_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/version_update_textview"
+                    android:layout_marginLeft="3dp"
+                    android:layout_toRightOf="@id/version_update_textview"
+                    android:textColor="@android:color/black" />
 
                 <ImageView
                     android:id="@+id/version_enter_icon"
@@ -124,15 +133,15 @@
                     android:src="@mipmap/enter_icon" />
 
                 <TextView
-                    android:id="@+id/newest_version"
+                    android:id="@+id/touch_update"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="10dp"
                     android:layout_toLeftOf="@id/version_enter_icon"
-                    android:text="V1.2"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textColor="#808080"
+                    android:text="点击检测更新"
+                    android:textSize="14sp" />
 
             </RelativeLayout>
 
