--- a/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
+++ b/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
@@ -26,7 +26,7 @@
             android:scaleType="centerCrop"
             android:src="@mipmap/hyman" />
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/myposition_ll"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -34,7 +34,8 @@
             android:layout_toRightOf="@id/passenger_avatar"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:layout_marginRight="60dp">
 
             <ImageView
                 android:layout_width="20dp"
@@ -46,15 +47,15 @@
                 android:id="@+id/myposition_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="26dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="长沙轮渡"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/passengerposition_ll"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -64,7 +65,8 @@
             android:layout_toRightOf="@id/passenger_avatar"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:layout_marginRight="60dp">
 
             <ImageView
                 android:layout_width="20dp"
@@ -76,18 +78,18 @@
                 android:id="@+id/passengerposition_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="26dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="友阿百货"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/call_passenger"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
