--- a/driver_pro/app/src/main/res/layout/ativity_confirmbill.xml
+++ b/driver_pro/app/src/main/res/layout/ativity_confirmbill.xml
@@ -26,14 +26,14 @@
 
                 <com.guokrspace.dududriver.view.CircleImageView
                     android:id="@+id/passenger_avatar"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/hyman" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/myposition_ll"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -41,7 +41,8 @@
                     android:layout_toRightOf="@id/passenger_avatar"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingLeft="16dp">
+                    android:paddingLeft="16dp"
+                    android:layout_marginRight="52dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -53,15 +54,15 @@
                         android:id="@+id/myposition_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="26dp"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="长沙轮渡"
-                        android:textSize="22sp"
+                        android:textSize="17sp"
                         android:textColor="@android:color/white"/>
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/passengerposition_ll"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -71,7 +72,8 @@
                     android:layout_toRightOf="@id/passenger_avatar"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingLeft="16dp">
+                    android:paddingLeft="16dp"
+                    android:layout_marginRight="52dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -83,13 +85,13 @@
                         android:id="@+id/passengerposition_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="26dp"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="友阿百货"
-                        android:textSize="22sp"
+                        android:textSize="17sp"
                         android:textColor="@android:color/white"/>
-                </LinearLayout>
+                </RelativeLayout>
 
                 <ImageButton
                     android:id="@+id/passenger_info"
@@ -140,7 +142,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="起步价"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/start_price_tv"
@@ -148,7 +150,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:text="@string/start_price"
-                    android:textSize="18sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -163,7 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mileage_text"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/mileage_cost"
@@ -171,7 +174,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:text="@string/mileage_cost"
-                    android:textSize="18sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -186,7 +190,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/low_speed_text"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/low_speed_cost"
@@ -194,7 +198,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:text="@string/low_speed_cost"
-                    android:textSize="18sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -214,7 +219,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="30"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:gravity="center"
                     android:textColor="@color/light_gray"
                     android:text="高速费"/>
@@ -250,7 +255,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="0.0元"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/height_speed_cost_add"
@@ -279,7 +284,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="30"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:gravity="center"
                     android:textColor="@color/light_gray"
                     android:text="路桥费"/>
@@ -313,7 +318,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="0.0元"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/bridge_cost_add"
@@ -342,7 +347,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="30"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:gravity="center"
                     android:textColor="@color/light_gray"
                     android:text="停车费"/>
@@ -375,7 +380,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="0.0元"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/park_cost_add"
@@ -389,11 +394,11 @@
             <com.gc.materialdesign.views.ButtonRectangle
                 android:id="@+id/confirm_button"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginBottom="6dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/dark_red"
                 android:gravity="center"
                 android:text="完成"
